--- a/unaspmobile/.classpath
+++ b/unaspmobile/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="com.worklight.studio.plugin.classpath.SERVER_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="server/java"/>
+	<classpathentry kind="lib" path="C:/Users/ec.086539/git/unaspmobile/unaspmobile/server/lib/sqljdbc4.jar" rootpath="/"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
