--- a/unaspmobile/.settings/org.eclipse.core.resources.prefs
+++ b/unaspmobile/.settings/org.eclipse.core.resources.prefs
@@ -1,17 +1,18 @@
-#Mon Sep 22 14:19:07 BRT 2014
-wl_version=6.2.0.00.20140915-1601
+analytics.android=2541125865
 analytics.ipad=3882346749
-base.ipad=3024550203
-base.android=1993823734
-encoding/<project>=UTF-8
-fipshttp.ipad=2537779042
 analytics.iphone=172702511
+base.android=1993823734
+base.ipad=3024550203
 base.iphone=3024550203
-jsonstore.windowsphone8=3895413455
-jsonstore.android=790094678
+base.windowsphone8=1621018583
 common.android=1795526790
 eclipse.preferences.version=1
-fipshttp.iphone=933660520
-base.windowsphone8=1621018583
+encoding//apps/unaspmobile/common/index.html=UTF-8
+encoding//apps/unaspmobile/common/js/main.js=UTF-8
+encoding/<project>=UTF-8
 fipshttp.android=690177043
-analytics.android=2541125865
+fipshttp.ipad=2537779042
+fipshttp.iphone=933660520
+jsonstore.android=790094678
+jsonstore.windowsphone8=3895413455
+wl_version=6.2.0.00.20140915-1601
