options curso e periodo funcionando

--- a/unaspmobile/.settings/org.eclipse.core.resources.prefs
+++ b/unaspmobile/.settings/org.eclipse.core.resources.prefs
@@ -1,18 +1,19 @@
-analytics.android=2541125865
-analytics.ipad=3882346749
-analytics.iphone=172702511
-base.android=1993823734
-base.ipad=3024550203
-base.iphone=3024550203
-base.windowsphone8=1621018583
-common.android=1795526790
-eclipse.preferences.version=1
+#Fri Oct 03 15:40:33 BRT 2014
+base.iphone=3340478406
 encoding//apps/unaspmobile/common/index.html=UTF-8
-encoding//apps/unaspmobile/common/js/main.js=UTF-8
-encoding/<project>=UTF-8
+base.android=1356647314
+jsonstore.windowsphone8=2284255988
+common.android=1795526790
 fipshttp.android=690177043
-fipshttp.ipad=2537779042
-fipshttp.iphone=933660520
+wl_version=6.2.0.00.20140825-1637
+eclipse.preferences.version=1
+encoding//apps/unaspmobile/common/js/main.js=UTF-8
+base.windowsphone8=369801381
+encoding/<project>=UTF-8
 jsonstore.android=790094678
-jsonstore.windowsphone8=3895413455
-wl_version=6.2.0.00.20140915-1601
+analytics.ipad=3882346749
+fipshttp.iphone=2108801065
+fipshttp.ipad=167156036
+base.ipad=3340478406
+analytics.iphone=172702511
+analytics.android=2541125865
